Always refresh head/latest

--- a/index.html
+++ b/index.html
@@ -3518,6 +3518,9 @@
         "22.3",
         "22.2"
     ],
+    "RIPEMD160": [
+        "head"
+    ],
     "SCHEMA": [
         "head",
         "latest",
@@ -6877,6 +6880,9 @@
         "21.10",
         "21.9"
     ],
+    "arrayElementOrNull": [
+        "head"
+    ],
     "arrayEnumerate": [
         "head",
         "latest",
@@ -8750,6 +8756,7 @@
     ],
     "arrayZipUnaligned": [
         "head",
+        "latest",
         "24.9"
     ],
     "array_agg": [
@@ -13928,6 +13935,9 @@
         "21.10",
         "21.9"
     ],
+    "date_bin": [
+        "head"
+    ],
     "date_diff": [
         "head",
         "latest",
@@ -16540,14 +16550,17 @@
     ],
     "distinctDynamicTypes": [
         "head",
+        "latest",
         "24.9"
     ],
     "distinctJSONPaths": [
         "head",
+        "latest",
         "24.9"
     ],
     "distinctJSONPathsAndTypes": [
         "head",
+        "latest",
         "24.9"
     ],
     "divide": [
@@ -20979,6 +20992,9 @@
         "21.11",
         "21.10",
         "21.9"
+    ],
+    "getSettingOrDefault": [
+        "head"
     ],
     "getSizeOfEnumType": [
         "head",
@@ -33860,10 +33876,12 @@
     ],
     "overlay": [
         "head",
+        "latest",
         "24.9"
     ],
     "overlayUTF8": [
         "head",
+        "latest",
         "24.9"
     ],
     "parseDateTime": [
@@ -40455,9 +40473,6 @@
         "22.2",
         "22.1"
     ],
-    "ripeMD160": [
-        "head"
-    ],
     "round": [
         "head",
         "latest",
@@ -45348,6 +45363,9 @@
         "21.11",
         "21.10",
         "21.9"
+    ],
+    "time_bucket": [
+        "head"
     ],
     "timestamp": [
         "head",
@@ -56540,6 +56558,7 @@
     "MD4": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#md4",
     "MD5": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#md5",
     "REGEXP_EXTRACT": "https://clickhouse.com/docs/en/sql-reference/functions/string-search-functions/#regexpextract",
+    "RIPEMD160": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#ripemd160",
     "SUBSTRING_INDEX": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#substringindex",
     "SVG": "https://clickhouse.com/docs/en/sql-reference/functions/geo/svg/#svg",
     "TUMBLE": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#tumble",
@@ -56688,7 +56707,7 @@
     "concatWithSeparator": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#concatwithseparator",
     "concatWithSeparatorAssumeInjective": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#concatwithseparatorassumeinjective",
     "connectionId": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#connectionid",
-    "connection_id": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#connection_id",
+    "connection_id": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#connectionid",
     "convertCharset": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#convertcharset",
     "cos": "https://clickhouse.com/docs/en/sql-reference/functions/math-functions/#cos",
     "cosh": "https://clickhouse.com/docs/en/sql-reference/functions/math-functions/#cosh",
@@ -56702,7 +56721,9 @@
     "currentDatabase": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentdatabase",
     "currentProfiles": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentprofiles",
     "currentRoles": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentroles",
+    "currentSchemas": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentschemas",
     "current_database": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentdatabase",
+    "current_schemas": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentschemas",
     "cutFragment": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#cutfragment",
     "cutQueryString": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#cutquerystring",
     "cutQueryStringAndFragment": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#cutquerystringandfragment",
@@ -56788,6 +56809,7 @@
     "extractAllGroups": "https://clickhouse.com/docs/en/sql-reference/functions/splitting-merging-functions/#extractallgroups",
     "extractAllGroupsHorizontal": "https://clickhouse.com/docs/en/sql-reference/functions/string-search-functions/#extractallgroupshorizontal",
     "extractAllGroupsVertical": "https://clickhouse.com/docs/en/sql-reference/functions/string-search-functions/#extractallgroupsvertical",
+    "extractGroups": "https://clickhouse.com/docs/en/sql-reference/functions/string-search-functions/#extractgroups",
     "extractKeyValuePairs": "https://clickhouse.com/docs/en/sql-reference/functions/tuple-map-functions/#extractkeyvaluepairs",
     "extractKeyValuePairsWithEscaping": "https://clickhouse.com/docs/en/sql-reference/functions/tuple-map-functions/#extractkeyvaluepairswithescaping",
     "extractTextFromHTML": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#extracttextfromhtml",
@@ -56845,6 +56867,7 @@
     "getOSKernelVersion": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#getoskernelversion",
     "getServerPort": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#getserverport",
     "getSetting": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#getsetting",
+    "getSettingOrDefault": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#getsettingordefault",
     "getSizeOfEnumType": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#getsizeofenumtype",
     "getSubcolumn": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#getsubcolumn",
     "getTypeSerializationStreams": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#gettypeserializationstreams",
@@ -57225,7 +57248,6 @@
     "rightPad": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#rightpad",
     "rightPadUTF8": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#rightpadutf8",
     "rightUTF8": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#rightutf8",
-    "ripeMD160": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#ripemd160",
     "round": "https://clickhouse.com/docs/en/sql-reference/functions/rounding-functions/#round",
     "roundAge": "https://clickhouse.com/docs/en/sql-reference/functions/rounding-functions/#roundage",
     "roundBankers": "https://clickhouse.com/docs/en/sql-reference/functions/rounding-functions/#roundbankers",
@@ -57577,46 +57599,43 @@
     "zookeeperSessionUptime": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#zookeepersessionuptime"
 };
     var aliases = {
-    "from_utc_timestamp": "fromUTCTimestamp",
     "connection_id": "connectionid",
-    "truncate": "trunc",
-    "ceiling": "ceil",
     "rand32": "rand",
     "INET6_ATON": "IPv6StringToNum",
     "INET_ATON": "IPv4StringToNum",
+    "truncate": "trunc",
+    "ceiling": "ceil",
     "replace": "replaceAll",
+    "from_utc_timestamp": "fromUTCTimestamp",
     "mapFromString": "extractKeyValuePairs",
     "str_to_map": "extractKeyValuePairs",
     "SUBSTRING_INDEX": "substringIndex",
     "TO_BASE64": "base64Encode",
     "SVG": "svg",
-    "levenshteinDistanceUTF8": "editDistanceUTF8",
-    "mismatches": "byteHammingDistance",
     "INET6_NTOA": "IPv6NumToString",
     "JSON_ARRAY_LENGTH": "JSONArrayLength",
-    "caseWithExpr": "caseWithExpression",
+    "levenshteinDistanceUTF8": "editDistanceUTF8",
+    "mismatches": "byteHammingDistance",
     "INET_NTOA": "IPv4NumToString",
     "current_database": "currentDatabase",
     "levenshteinDistance": "editDistance",
     "pmod": "positiveModulo",
-    "current_schemas": "currentSchemas",
-    "TO_UNIXTIME": "parseDateTime",
-    "current_user": "currentUser",
-    "visitParamExtractFloat": "simpleJSONExtractFloat",
-    "TIMESTAMP_DIFF": "dateDiff",
+    "user": "currentUser",
     "visitParamHas": "simpleJSONHas",
     "timeZoneOffset": "timezoneOffset",
     "timestamp_diff": "dateDiff",
     "timestampDiff": "dateDiff",
+    "time_bucket": "toStartOfInterval",
     "date_diff": "dateDiff",
     "REGEXP_REPLACE": "replaceAll",
     "timeZone": "timezone",
     "DATE_TRUNC": "dateTrunc",
-    "vectorDifference": "tupleMinus",
-    "DAYOFMONTH": "toDayOfMonth",
     "distanceL2Squared": "L2SquaredDistance",
     "partitionID": "partitionId",
     "MONTH": "toMonth",
+    "caseWithExpr": "caseWithExpression",
+    "sqid": "sqidEncode",
+    "toStartOfFiveMinute": "toStartOfFiveMinutes",
     "FROM_DAYS": "fromDaysSinceYearZero",
     "DATE_FORMAT": "formatDateTime",
     "caseWithoutExpr": "multiIf",
@@ -57637,6 +57656,8 @@
     "DATE_DIFF": "dateDiff",
     "DATABASE": "currentDatabase",
     "rpad": "rightPad",
+    "vectorDifference": "tupleMinus",
+    "DAYOFMONTH": "toDayOfMonth",
     "jsonMergePatch": "JSONMergePatch",
     "visitParamExtractBool": "simpleJSONExtractBool",
     "CHAR_LENGTH": "lengthUTF8",
@@ -57650,25 +57671,24 @@
     "LAST_DAY": "toLastDayOfMonth",
     "timeZoneOf": "timezoneOf",
     "OCTET_LENGTH": "length",
-    "user": "currentUser",
     "distanceLp": "LpDistance",
     "lcase": "lower",
     "REGEXP_MATCHES": "match",
     "toTimeZone": "toTimezone",
     "SECOND": "toSecond",
+    "date_bin": "toStartOfInterval",
     "str_to_date": "parseDateTimeOrNull",
     "FORMAT_BYTES": "formatReadableSize",
     "normL2Squared": "L2SquaredNorm",
     "visitParamExtractRaw": "simpleJSONExtractRaw",
     "serverTimeZone": "serverTimezone",
+    "current_schemas": "currentSchemas",
+    "current_user": "currentUser",
+    "TO_UNIXTIME": "parseDateTime",
     "normalizeLp": "LpNormalize",
     "week": "toWeek",
     "DAYOFYEAR": "toDayOfYear",
-    "scalarProduct": "dotProduct",
-    "yandexConsistentHash": "kostikConsistentHash",
     "TO_DAYS": "toDaysSinceYearZero",
-    "toStartOfFiveMinute": "toStartOfFiveMinutes",
-    "sqid": "sqidEncode",
     "HOUR": "toHour",
     "QUARTER": "toQuarter",
     "UTC_timestamp": "UTCTimestamp",
@@ -57691,6 +57711,8 @@
     "REGEXP_EXTRACT": "regexpExtract",
     "normalizeL1": "L1Normalize",
     "CHARACTER_LENGTH": "lengthUTF8",
+    "TIMESTAMP_DIFF": "dateDiff",
+    "visitParamExtractFloat": "simpleJSONExtractFloat",
     "distanceLinf": "LinfDistance",
     "yearweek": "toYearWeek",
     "visitParamExtractInt": "simpleJSONExtractInt",
@@ -57702,6 +57724,8 @@
     "normL1": "L1Norm",
     "vectorSum": "tuplePlus",
     "mod": "modulo",
+    "yandexConsistentHash": "kostikConsistentHash",
+    "scalarProduct": "dotProduct",
     "normL2": "L2Norm",
     "DAY": "toDayOfMonth",
     "visitParamExtractString": "simpleJSONExtractString",
@@ -57806,7 +57830,7 @@
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-29 15:17</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-10-10 22:11</p>
     </footer>
 </div>
 <script>
