--- a/keywords.html
+++ b/keywords.html
@@ -888,6 +888,9 @@
         "24.7",
         "24.6"
     ],
+    "CLONE AS": [
+        "head"
+    ],
     "CLUSTER": [
         "head",
         "latest",
@@ -4501,6 +4504,7 @@
     ],
     "RESET AUTHENTICATION METHODS TO NEW": [
         "head",
+        "latest",
         "24.9"
     ],
     "RESET SETTING": [
@@ -5955,6 +5959,9 @@
         "24.4",
         "24.3"
     ],
+    "WITH IMPLICIT": [
+        "head"
+    ],
     "WITH NAME": [
         "head",
         "latest",
@@ -6180,7 +6187,7 @@
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-29 15:17</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-10-10 22:11</p>
     </footer>
 </div>
 <script>
