--- a/settings.html
+++ b/settings.html
@@ -1531,6 +1531,9 @@
         "24.1",
         "23.12"
     ],
+    "allow_experimental_shared_set_join": [
+        "head"
+    ],
     "allow_experimental_statistic": [
         "head",
         "latest",
@@ -4313,6 +4316,9 @@
         "24.1",
         "23.12"
     ],
+    "cloud_mode_database_engine": [
+        "head"
+    ],
     "cloud_mode_engine": [
         "head",
         "latest",
@@ -6054,6 +6060,42 @@
         "23.11",
         "23.10"
     ],
+    "distributed_cache_bypass_connection_pool": [
+        "head"
+    ],
+    "distributed_cache_connect_max_tries": [
+        "head"
+    ],
+    "distributed_cache_data_packet_ack_window": [
+        "head"
+    ],
+    "distributed_cache_fetch_metrics_only_from_current_az": [
+        "head"
+    ],
+    "distributed_cache_log_mode": [
+        "head"
+    ],
+    "distributed_cache_max_unacked_inflight_packets": [
+        "head"
+    ],
+    "distributed_cache_pool_behaviour_on_limit": [
+        "head"
+    ],
+    "distributed_cache_read_alignment": [
+        "head"
+    ],
+    "distributed_cache_receive_response_wait_milliseconds": [
+        "head"
+    ],
+    "distributed_cache_receive_timeout_milliseconds": [
+        "head"
+    ],
+    "distributed_cache_throw_on_error": [
+        "head"
+    ],
+    "distributed_cache_wait_connection_from_pool_milliseconds": [
+        "head"
+    ],
     "distributed_connections_pool_size": [
         "head",
         "latest",
@@ -7385,6 +7427,9 @@
     "enable_parallel_replicas": [
         "head"
     ],
+    "enable_parsing_to_custom_serialization": [
+        "head"
+    ],
     "enable_positional_arguments": [
         "head",
         "latest",
@@ -7521,6 +7566,9 @@
         "21.11",
         "21.10",
         "21.9"
+    ],
+    "enable_secure_identifiers": [
+        "head"
     ],
     "enable_sharing_sets_for_mutations": [
         "head",
@@ -12009,6 +12057,9 @@
         "24.9",
         "24.8",
         "24.7"
+    ],
+    "input_format_binary_read_json_as_string": [
+        "head"
     ],
     "input_format_bson_skip_fields_with_unsupported_types_in_schema_inference": [
         "head",
@@ -18881,6 +18932,9 @@
         "21.10",
         "21.9"
     ],
+    "max_parts_to_move": [
+        "head"
+    ],
     "max_pipeline_depth": [
         "head",
         "latest",
@@ -21472,6 +21526,12 @@
         "24.4",
         "24.3",
         "24.2"
+    ],
+    "min_free_disk_bytes_to_perform_insert": [
+        "head"
+    ],
+    "min_free_disk_ratio_to_perform_insert": [
+        "head"
     ],
     "min_free_disk_space_for_temporary_data": [
         "head",
@@ -24186,11 +24246,6 @@
         "21.10",
         "21.9"
     ],
-    "output_format_always_quote_identifiers": [
-        "head",
-        "latest",
-        "24.9"
-    ],
     "output_format_arrow_compression_method": [
         "head",
         "latest",
@@ -24506,6 +24561,9 @@
         "24.8",
         "24.7"
     ],
+    "output_format_binary_write_json_as_string": [
+        "head"
+    ],
     "output_format_bson_string_as_string": [
         "head",
         "latest",
@@ -24694,11 +24752,6 @@
         "21.11",
         "21.10",
         "21.9"
-    ],
-    "output_format_identifier_quoting_style": [
-        "head",
-        "latest",
-        "24.9"
     ],
     "output_format_json_array_of_rows": [
         "head",
@@ -25067,6 +25120,9 @@
         "24.9",
         "24.8",
         "24.7"
+    ],
+    "output_format_native_write_json_as_string": [
+        "head"
     ],
     "output_format_orc_compression_method": [
         "head",
@@ -28490,6 +28546,9 @@
         "21.11",
         "21.10"
     ],
+    "read_through_distributed_cache": [
+        "head"
+    ],
     "readonly": [
         "head",
         "latest",
@@ -29207,6 +29266,9 @@
         "21.12",
         "21.11",
         "21.10"
+    ],
+    "restore_replace_external_dictionary_source_to_null": [
+        "head"
     ],
     "restore_replace_external_engines_to_null": [
         "head",
@@ -30698,6 +30760,16 @@
         "21.11",
         "21.10",
         "21.9"
+    ],
+    "show_create_query_identifier_quoting_rule": [
+        "head",
+        "latest",
+        "24.9"
+    ],
+    "show_create_query_identifier_quoting_style": [
+        "head",
+        "latest",
+        "24.9"
     ],
     "show_table_uuid_in_table_create_query_if_not_nil": [
         "head",
@@ -32813,6 +32885,9 @@
         "23.2",
         "23.1"
     ],
+    "write_through_distributed_cache": [
+        "head"
+    ],
     "zstd_window_log_max": [
         "head",
         "latest",
@@ -32904,7 +32979,7 @@
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-29 15:17</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-10-10 22:11</p>
     </footer>
 </div>
 <script>
