--- a/keywords.html
+++ b/keywords.html
@@ -1012,6 +1012,9 @@
         "24.4",
         "24.3"
     ],
+    "CONNECTIONS": [
+        "head"
+    ],
     "CONST": [
         "head",
         "latest",
@@ -6187,7 +6190,7 @@
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-10-25 23:30</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-10-30 07:30</p>
     </footer>
 </div>
 <script>
